# Engine23

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake
backend/: CMakeLists.txt
backend/cuda/: CMakeLists.txt
backend/glfw/: CMakeLists.txt  WindowManagerGLFW.cpp  WindowManagerGLFW.h
backend/metal/: CMakeLists.txt
backend/opengl/: CMakeLists.txt  GLMeshRenderPass.cpp  GLMeshRenderPass.h  OpenGLUtils.cpp  OpenGLUtils.h  SystemBuffers.cpp  SystemBuffers.h  SystemRendererOpenGL.cpp  SystemRendererOpenGL.h  SystemShaderPrograms.cpp  SystemShaderPrograms.h  SystemVertexArrayObject.cpp  SystemVertexArrayObject.h
backend/vulkan/: CMakeLists.txt
ext/: CMakeLists.txt
ext/glfw/: CMakeLists.txt  SystemWindowGLFW.cpp
include/: CMakeLists.txt  ClickPoint.h  CommandDoubleBuffer.h  CommandDoubleBufferRender.h  CommandDoubleBufferSimulation.h  CommandGraph.h  Commands.h  Component.h  ComponentGui.h  Components.h  DegreesToRadians.h  DynamicBitset.h  EigenPointTraits.h  EigenToGlm.h  Engine.h  EngineFwd.h  Entity.h  EntityGui.h  EnumAsBitmask.h  Events.h  Factories.h  FileSystemStl.h  GlmPointTraits.h  GlmToEigen.h  GlmUtils.h  GraphicsModule.h  ImGuiUtils.h  Input.h  KDtreeAdapters.h  Keyboard.h  Managers.h  Mouse.h  Octree.h  Picker.h  Plugins.h  PointTraits.h  RenderContext.h  Renderable.h  SafeAcos.h  SafeAngle.h  (+30 more)
include/AABB/: AABB.h  AABBClosestPoint.h  AABBContainsAABB.h  AABBContainsPoint.h  AABBGui.h  AABBIntersectsAABB.h  AABBIntersectsLine.h  AABBIntersectsPlane.h  AABBIntersectsRay.h  AABBIntersectsSphere.h  AABBMortonSubdivide.h  AABBSurfaceArea.h  AABBVolume.h  SystemAABB.h
include/Asset/: Asset.h  AssetGui.h  SystemAsset.h
include/Camera/: Camera.h  CameraArcballParameters.h  CameraGui.h  Frustum.h  LookAtRH.h  OrthoRH_NO.h  OrthographicProjection.h  PerspectiveProjection.h  PerspectiveRH_NO.h  ProjectionMatrix.h  SystemCamera.h  ViewMatrix.h  ViewParameters.h
include/Command/: EntityCommands.h
include/EigenUtils/: IsEigenType.h  VectorEigenMap.h
include/Events/: Events.h  InternalCallbackEvents.h  InternalEngineEvents.h
include/File/: FilePath.h  FileWatcher.h
include/Graph/: Graph.h  GraphEdgeLengths.h
include/Hierarchy/: Hierarchy.h  HierarchyGui.h  SystemHierarchy.h
include/Image/: Image.h
include/Line/: Line.h  LineClosestPoint.h  LineIntersectsAABB.h  LineIntersectsSphere.h
include/Material/: ActiveMaterials.h  ActiveMaterialsGui.h  Attribute.h  AttributeGui.h  CommandsMaterial.h  Material.h  MaterialGui.h  SystemActiveMaterials.h  SystemAttribute.h  SystemMaterial.h  SystemUniform.h  Texture.h  TextureGui.h  Uniform.h  UniformGui.h
include/Matrix/: MatrixCheckFinite.h  MatrixStackHorizontal.h  MatrixStackVertical.h
include/Mesh/: Mesh.h  MeshFaceAreaVectors.h  MeshFaceAreas.h  MeshFaceNormals.h  MeshGui.h  MeshIo.h  MeshReader.h  MeshReaderObj.h  MeshReaderOff.h  MeshReaderPly.h  MeshReaderPmp.h  MeshReaderStl.h  MeshVertexNormalsAngleWeighted.h  MeshVertexNormalsAreaAngleHybrid.h  MeshVertexNormalsAreaWeighted.h  MeshVertexNormalsUniform.h  MeshWriter.h  MeshWriterObj.h  MeshWriterOff.h  MeshWriterPly.h  MeshWriterPmp.h  MeshWriterStl.h  SystemMesh.h
include/Optimizer/: Adam.h  Optimizer.h
include/Plane/: Plane.h  PlaneClosestPoint.h  PlaneIntersectsAABB.h  PlaneIntersectsLine.h  PlaneIntersectsPlane.h  PlaneIntersectsRay.h  PlaneIntersectsSphere.h  PlaneLeastSquaresFit.h
include/PointCloud/: PointCloud.h
include/Property/: AbstractProperty.h  EdgeContainer.h  FaceContainer.h  HalfedgeContainer.h  HandleBase.h  Property.h  PropertyContainer.h  PropertyEigenMap.h  PropertyGui.h  PropertyIterator.h  PropertyUtils.h  PropertyVector.h  VertexContainer.h
include/Ray/: Ray.h  RayClosestPoint.h  RayIntersectsAABB.h  RayIntersectsSphere.h  RayIntersectsTriangle.h
include/Rendering/: DefaultMeshRenderPass.h  Material.h  RenderPass.h  RenderSettings.h  RenderSettingsGui.h  Renderable.h  ShaderProgram.h  Uniform.h  UniformBufferObject.h  VertexAttribute.h
include/Resources/: ResourceContainer.h  SystemResources.h
include/Rotation/: CrossProductMatrix.h  Rotation3D6dof.h  Rotation3DAngleAxis.h  Rotation3DCayley.h  RotationSkewSymmetricHelper.h
include/Segment/: Segment.h  SegmentClosestPoint.h  SegmentIntersectsAABB.h  SegmentIntersectsSphere.h  SegmentIntersectsTriangle.h
include/SparseMatrix/: SparseMatrixCheckFinite.h  SparseMatrixCheckHermitian.h  SparseMatrixCheckSymmetric.h  SparseMatrixStackHorizontal.h  SparseMatrixStackVertical.h  SparseMatrixToTriplets.h
include/Sphere/: Sphere.h  SphereClosestPoint.h  SphereContainsAABB.h  SphereContainsPoint.h  SphereContainsSphere.h  SphereIntersectsAABB.h  SphereIntersectsLine.h  SphereIntersectsRay.h  SphereIntersectsSphere.h  SphereIterativeFit.h  SphereLeastSquaresFit.h  SphereSamplingFibunacciLattice.h  SphereSurfaceArea.h  SphereVolume.h
include/Texture/: SystemTexture.h  Texture.h  TextureGui.h
include/Transform/: SystemTransform.h  Transform.h  TransformGui.h
include/Triangle/: Triangle.h  TriangleArea.h  TriangleBarycentricCoordinates.h  TriangleClosestPoint.h  TriangleIntersectsRay.h
include/Visibility/: VisibilityComponent.h
include/Window/: SystemWindowGLFW.h  Window.h
include/components/: AABB.h  Camera.h  (+16 more)
platform/: CMakeLists.txt  Platform.cpp  Platform.h
src/: CMakeLists.txt  ClickPoint.cpp  CommandGraph.cpp  Commands.cpp  Components.cpp  Engine.cpp  Entity.cpp  EntityGui.cpp  Factories.cpp  FilePath.cpp  ImGuiUtils.cpp  Managers.cpp  Picker.cpp  Plugins.cpp  SafeAcos.cpp  StringUtils.cpp  SystemCamera.cpp  SystemCommandBuffers.cpp  SystemDearImGui.cpp  SystemEntity.cpp  SystemGui.cpp  SystemHierarchy.cpp  SystemLogger.cpp  SystemParallelProcessing.cpp  SystemPlatform.cpp  SystemPlugins.cpp  SystemRendererVulkan.cpp  SystemTimer.cpp  SystemTransform.cpp  SystemTriMesh.cpp  SystemUserInput.cpp  SystemVulkan.cpp  SystemWindowGLFW.cpp  Systems.cpp
test/: CMakeLists.txt  TestAABB.cpp  TestCommandGraph.cpp  TestCommandGraphAdj.cpp  TestEntt.cpp  TestLine.cpp  TestPlane.cpp  TestRay.cpp  TestSegment.cpp  TestSphere.cpp  TestTriangle.cpp
(+165 files in other folders)
