target_include_directories(Engine23Lib PUBLIC .)
add_subdirectory(AABB)
add_subdirectory(Asset)
add_subdirectory(Camera)
add_subdirectory(EigenUtils)
add_subdirectory(File)
add_subdirectory(Graph)
add_subdirectory(Hierarchy)
add_subdirectory(Matrix)
add_subdirectory(Mesh)
add_subdirectory(Plane)
add_subdirectory(PointCloud)
add_subdirectory(Property)
add_subdirectory(Ray)
add_subdirectory(Rotation)
add_subdirectory(Segment)
add_subdirectory(SparseMatrix)
add_subdirectory(Sphere)
add_subdirectory(systems)
add_subdirectory(Transform)
add_subdirectory(Triangle)
add_subdirectory(Window)
