target_sources(Engine23Lib PRIVATE
        Commands.cpp
        CommandGraph.cpp
        Components.cpp
        Engine.cpp
        FilePath.cpp
        StringUtils.cpp
        ImGuiUtils.cpp
        Plugins.cpp
        SafeAcos.cpp
)
add_subdirectory(AABB)
add_subdirectory(Asset)
add_subdirectory(Camera)
add_subdirectory(File)
add_subdirectory(Graph)
add_subdirectory(Hierarchy)
add_subdirectory(Mesh)
add_subdirectory(Property)
add_subdirectory(PointCloud)
add_subdirectory(Rendering)
add_subdirectory(systems)
add_subdirectory(Transform)
