add_library(bcg_plugin_learn_opengl SHARED)

add_subdirectory(include)
add_subdirectory(src)

target_link_libraries(bcg_plugin_learn_opengl PRIVATE Engine23Lib)

export(TARGETS bcg_plugin_learn_opengl NAMESPACE FILE BcgPluginLearnOpenGLTargets.cmake)

add_dependencies(Engine23 bcg_plugin_learn_opengl)